[project]
name = "stm"
dynamic = ["dependencies"]

version = "1.6.0"

requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["stm"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
